--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,9 @@
 {
-    "editor.tabSize": 2,
-    "editor.defaultFormatter": "misogi.ruby-rubocop",
-    "ruby.useBundler": true, //run non-lint commands with bundle exec
-    "ruby.useLanguageServer": true, // use the internal language server
-    "ruby.lint": {
-        "rubocop": {
-            "useBundler": true // enable rubocop via bundler
-        },
-    },
+    "[ruby]": {
+        "editor.formatOnSave": true,
+        "editor.formatOnType": true,
+        "editor.formatOnPaste": true,
+        "editor.tabSize": 2,
+        "editor.defaultFormatter": "misogi.ruby-rubocop"
+    }
 }
